# CopperFiller

./: LICENSE  README.md  pyproject.toml
plugin/: __init__.py  copper_filler_action.py  locale.py  logger.py
plugin/core/: check_libs.py  clipping.py  edge_cuts_utils.py  preprocessing.py  utils.py
plugin/data/json/: board_class.json
plugin/ui/: action_dialog.py  color.py  info_dialog.py  missing_lib_dialog.py
plugin/ui/locales/: copper_filler.pot
plugin/ui/locales/en/LC_MESSAGES/: copper_filler.mo  copper_filler.po
plugin/ui/locales/ru/LC_MESSAGES/: copper_filler.mo  copper_filler.po
